Fix loading text alignment

--- a/src/styles/_loader.scss
+++ b/src/styles/_loader.scss
@@ -2,16 +2,15 @@
 .loader-container {
   position: absolute;
   top: 50%;
-  left: 50%;
+	left: 50%;
+	margin-top: 1.5rem;
+	transform: translate(-50%, -50%);
 }
 
 // LOADER TEXT
 .loading-text {
-  // transform: translateX(-15%);
-  margin-top: 1rem;
 	-webkit-animation: flash linear 1s infinite;
   animation: flash linear 1s infinite;
-
 }
 
 @-webkit-keyframes flash {
